start using passportjs.org w/ browserid strategy

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "express-resource" : "",
     "oauth": "",
     "connect": "",
-    "connect-auth" : "",
+    "passport": "",
+    "passport-browserid": "",
     "mongoose" : "",
     "jade" : "",
     "moment": "",
     "twitter" : ""
   },
-  "engines": { "node": ">= 0.4.1" }
+  "engines": { "node": ">= 0.6.0" }
 }
