--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "psychotica",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "mongoose": "~3.8.4",
+    "passport": "~0.1.18"
   }
 }
